Fix arrow alignment issue with MenuItem template.
The arrow for drop-down MenuItems is now properly right-aligned, regardless of the presence of command shortcut text.

--- a/SharpEditor/SharpEditorWindow.xaml
+++ b/SharpEditor/SharpEditorWindow.xaml
@@ -248,7 +248,7 @@
 						<ColumnDefinition Width="35"/>
 						<ColumnDefinition Width="*" SharedSizeGroup="MenuItemHeaderSize"/>
 						<ColumnDefinition Width="Auto" SharedSizeGroup="MenuItemGestureTextSize"/>
-						<ColumnDefinition Width="20"/>
+						<ColumnDefinition Width="*"/>
 					</Grid.ColumnDefinitions>
 					<Border
 						x:Name="IconPanel" Grid.Column="0"
