Add sorting to template config menu.
The template files and libraries in the New From Template menu are now appropriately sorted (by library/file and then by name).

--- a/SharpEditor/SharpEditorWindow.xaml
+++ b/SharpEditor/SharpEditorWindow.xaml
@@ -555,7 +555,7 @@
 						</Style>
 					</MenuItem.ItemContainerStyle>
 					<MenuItem.ItemTemplate>
-						<HierarchicalDataTemplate DataType="{x:Type local:TemplateMenuItem2}" ItemsSource="{Binding Path=MenuItems}">
+						<HierarchicalDataTemplate DataType="{x:Type local:TemplateMenuItem}" ItemsSource="{Binding Path=MenuItems}">
 							<TextBlock Text="{Binding Name}"/>
 						</HierarchicalDataTemplate>
 					</MenuItem.ItemTemplate>
