Add mouse highlighting to designer.
Designer area now allows for highlighting of areas on mouse over. This has been incorporated such that relevant registered areas are highlighted.

--- a/SharpEditor/Designer/DesignerArea.xaml
+++ b/SharpEditor/Designer/DesignerArea.xaml
@@ -170,6 +170,8 @@
 			Background="#1e1e1e"
 			ScaleChanged="OnCanvasScaleChanged"
 			CanvasLeftDoubleClick="OnCanvasDoubleClick"
+			MouseMove="OnDesignerViewerMouseMove"
+			MouseLeave="OnDesignerViewerMouseLeave"
 			PreviewMouseWheel="OnPreviewMouseWheel"
 			PreviewKeyDown="DesignerKeyHandler"
 			Focusable="True"
