--- a/SharpEditor/Documentation/DocumentationWindow.xaml
+++ b/SharpEditor/Documentation/DocumentationWindow.xaml
@@ -23,46 +23,6 @@
                   CanExecute="NavigationCommandCanExecute"/>
 	</Window.CommandBindings>
 
-	<Window.Resources>
-		<Style TargetType="Button" x:Key="SubtleButton" >
-			<Setter Property="Background" Value="Transparent"/>
-			<Setter Property="BorderBrush" Value="Transparent"/>
-			<Setter Property="BorderThickness" Value="1"/>
-			<Setter Property="Margin" Value="2"/>
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="{x:Type Button}">
-						<Border x:Name="border"
-								BorderBrush="{TemplateBinding BorderBrush}"
-								BorderThickness="{TemplateBinding BorderThickness}"
-								Background="{TemplateBinding Background}"
-								SnapsToDevicePixels="True">
-							<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-						</Border>
-
-						<ControlTemplate.Triggers>
-							<Trigger Property="IsEnabled" Value="False">
-								<Setter Property="Opacity" Value="0.3"/>
-							</Trigger>
-							<Trigger Property="IsMouseOver" Value="True">
-								<Setter Property="Background">
-									<Setter.Value>
-										<SolidColorBrush Color="#d3d3d3" Opacity="0.2" />
-									</Setter.Value>
-								</Setter>
-								<Setter Property="BorderBrush" TargetName="border">
-									<Setter.Value>
-										<SolidColorBrush Color="#d3d3d3" Opacity="0.5" />
-									</Setter.Value>
-								</Setter>
-							</Trigger>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-	</Window.Resources>
-
 	<DockPanel>
 		<Grid DockPanel.Dock="Top" Background="#2d2d30">
 			<Grid.ColumnDefinitions>
@@ -75,7 +35,7 @@
 			</Grid.ColumnDefinitions>
 			<Button Grid.Column="0" Click="OnBackClick" Style="{StaticResource SubtleButton}" Margin="0,2"
 					IsEnabled="{Binding Path=CanGoBack, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
-				<Image Source="../Images/Previous.png" Height="32" Margin="0,2"/>
+				<Image Source="../Images/Previous.png" Height="32"/>
 			</Button>
 			<Button Grid.Column="1" Click="OnNextClick" Style="{StaticResource SubtleButton}" Margin="0,2"
 					IsEnabled="{Binding Path=CanGoForward, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
