--- a/SharpEditor/AppResources.xaml
+++ b/SharpEditor/AppResources.xaml
@@ -354,7 +354,8 @@
 				</Grid.ColumnDefinitions>
 				<Border
 						x:Name="IconPanel" Grid.Column="0"
-						Height="16" Width="16" Margin="5,0,0,0"
+						Height="18" Width="18" Margin="5,0,0,0"
+						Padding="1"
 						VerticalAlignment="Center" HorizontalAlignment="Left"
 						BorderThickness="0"
 						Background="Transparent">
