--- a/SharpEditorAvalonia/Views/MainView.axaml
+++ b/SharpEditorAvalonia/Views/MainView.axaml
@@ -12,5 +12,5 @@
     <vm:MainViewModel />
   </Design.DataContext>
 
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  <TextBlock Name="Block1" Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 </UserControl>
