--- a/SharpEditorAvalonia/Designer/CanvasViewer.axaml
+++ b/SharpEditorAvalonia/Designer/CanvasViewer.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:views="clr-namespace:SharpEditorAvalonia.Views"
-             x:Class="SharpEditorAvalonia.CanvasViewer"
+             x:Class="SharpEditorAvalonia.Designer.CanvasViewer"
 			 mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="400">
 	<Grid>
