--- a/SharpEditorAvalonia/Views/MainWindow.axaml
+++ b/SharpEditorAvalonia/Views/MainWindow.axaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:SharpEditorAvalonia.Views"
         xmlns:AvaloniaEdit="clr-namespace:AvaloniaEdit;assembly=AvaloniaEdit"
-		xmlns:local="clr-namespace:SharpEditorAvalonia"
+		xmlns:designer="clr-namespace:SharpEditorAvalonia.Designer"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SharpEditorAvalonia.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -22,7 +22,7 @@
 			FontFamily="Cascadia Code,Consolas,Menlo,Monospace"
 			Grid.Row="0" Grid.Column="0"/>
 
-		<local:CanvasViewer Name="Viewer" Background="Black"
+		<designer:CanvasViewer Name="Viewer" Background="Black"
 			Grid.Row="0" Grid.Column="1"/>
 	</Grid>
 	
