--- a/SharpEditorAvalonia/Windows/LoadingWindow.axaml
+++ b/SharpEditorAvalonia/Windows/LoadingWindow.axaml
@@ -12,6 +12,7 @@
 		WindowStartupLocation="CenterScreen"
 		CanResize="False"
 		SystemDecorations="None"
+		Topmost="True"
 		FontFamily="{StaticResource ApplicationFont}"
 		FontSize="12">
 
@@ -19,7 +20,7 @@
 		<TextBlock DockPanel.Dock="Top"></TextBlock>
 		<TextBlock DockPanel.Dock="Bottom" Name="VersionTextBlock" Foreground="Gray" HorizontalAlignment="Left" Padding="6,0,0,0">Version 0.0.0.0</TextBlock>
 		<StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="12,2">
-			<Image Source="Images/Logo.png" Height="150"/>
+			<Image Source="/Images/Logo.png" Height="150"/>
 			<TextBlock
 				VerticalAlignment="Center"
 				Foreground="White"
