Continue porting to Avalonia.
Main editor ported, except main window Drop and tab rearrangement. Some elements still require additional features implementing, and minimal styling so far.

--- a/SharpEditorAvalonia/App.axaml
+++ b/SharpEditorAvalonia/App.axaml
@@ -15,5 +15,6 @@
 		<FontFamily x:Key="NotoSansFont">avares://SharpEditorAvalonia/Assets/Fonts#Noto Sans</FontFamily>
 		<FontFamily x:Key="OpenSansFont">avares://SharpEditorAvalonia/Assets/Fonts#Open Sans</FontFamily>
 		<FontFamily x:Key="ApplicationFont">avares://SharpEditorAvalonia/Assets/Fonts#Open Sans</FontFamily>
+		<FontFamily x:Key="EditorFont">avares://SharpEditorAvalonia/Assets/Fonts#DejaVu Sans Mono</FontFamily>
 	</Application.Resources>
 </Application>
