--- a/SharpEditorAvalonia/Windows/SettingsWindow.axaml
+++ b/SharpEditorAvalonia/Windows/SettingsWindow.axaml
@@ -2,7 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:managers="using:SharpEditorAvalonia.DataManagers"
         x:Class="SharpEditorAvalonia.Windows.SettingsWindow"
+		x:DataType="managers:SharpDataManager"
         mc:Ignorable="d"
         Title="Settings"
 		d:DesignWidth="800" d:DesignHeight="450"
@@ -10,8 +12,12 @@
 		MinWidth="300" MinHeight="200"
 		WindowStartupLocation="CenterOwner"
 		ShowInTaskbar="False"
-		SystemDecorations="BorderOnly"
+		SystemDecorations="None"
 		Background="#424245">
+
+	<Design.DataContext>
+		<managers:SharpDataManager/>
+	</Design.DataContext>
 
 	<Window.Styles>
 		<Style Selector="HeaderedContentControl">
